# DART-Planner

./: .bandit  .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  AUDIT_IMPLEMENTATION_SUMMARY.md  CI_IMPROVEMENTS_SUMMARY.md  CODE_OF_CONDUCT.md  CONFIG_MIGRATION_SUMMARY.md  CONTRIBUTING.md  CRITICAL_ISSUES_FIXED.md  LICENSE  Makefile  NEXT_STEPS.md  NO_HARDWARE_ACTION_PLAN.md  PROJECT_STATUS_UPDATE.md  README.md  REAL_TIME_CONFIG_MIGRATION_GUIDE.md  REFACTOR_STRATEGY.md  REMEDIATION_IMPLEMENTATION_SUMMARY.md  VALIDATION_RESULTS.md  airsim_settings.json  alembic.ini  bandit_report.json  credential_manager.key  debug_coordinate_frames.py  docker-compose.demo.yml  docker-compose.dev.yml  docker-compose.yml  env.example  importlinter.ini  motor_mixer_validation.py  mypy.ini  prepare_publication.py  pyproject.toml  pytest.ini  requirements-ci.txt  requirements-dev.txt  requirements.in  (+12 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
config/: airframes.yaml  defaults.yaml  hardware.yaml
dart_planner/: __init__.py
data/: README.md
demos/: Dockerfile  Dockerfile.demo  Dockerfile.dev  README.md
docs/: ADMIN_PANEL_USAGE.md  ARCHITECTURE_GUIDE.md  CI_CONSOLIDATION_SUMMARY.md  CI_ENHANCEMENTS.md  CLI_REFERENCE.md  CONFIGURATION.md  CONTROL_LOOP_OPTIMIZATION_SUMMARY.md  DEPENDENCY_MANAGEMENT.md  DEPENDENCY_NOTES.md  DEVELOPER_MIGRATION_GUIDE.md  DI_MIGRATION_GUIDE.md  DOCUMENTATION_UPDATE_SUMMARY.md  ERROR_HANDLING_POLICY.md  ESTIMATOR_SAFETY_DESIGN.md  HARDWARE_ABSTRACTION.md  HARDWARE_VALIDATION_ROADMAP.md  IMPROVEMENTS_SUMMARY.md  JWT_SECRET_KEY_FIX.md  MODULARIZATION_SUMMARY.md  MOTOR_MIXING_SAFETY.md  Makefile  OPTIMIZATIONS_SUMMARY.md  README.md  README_OPENSOURCE.md  REAL_TIME_SYSTEM.md  REFACTORING_SUMMARY.md  REMEDIATION_IMPLEMENTATION_STATUS.md  SECURITY_CRYPTO_IMPROVEMENTS.md  SECURITY_HARDENING.md  SECURITY_IMPLEMENTATION.md  SITL_INTEGRATION_GUIDE.md  TESTING_IMPROVEMENTS.md  THREAD_SAFE_STATE_BUFFER.md  conf.py  index.rst  quick_start.md
examples/: advanced_mission_example.py  heartbeat_demo.py  minimal_takeoff.py  minimal_takeoff.py.bak  quartic_scheduler_demo.py  real_time_integration_example.py  real_time_integration_example.py.bak  run_pixhawk_mission.py  state_buffer_demo.py
experiments/: README.md
legacy/: README.md
legacy_experiments/: README.md  optimization_roadmap.py  three_layer_optimization_plan.py
migrations/: env.py
requirements/: base.txt  ci.txt  dev.txt  requirements-ci.in  requirements-ci.txt  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
results/: README.md
scripts/: auto_migrate_real_time_config.py  benchmark_control_optimization.py  bootstrap_di.py  calibrate_motor_latency.py  cleanup_dial_mpc_references.py  cleanup_obsolete_files.py  create_sitl_simpleflight_config.py  deep_repository_cleanup.py  demonstrate_units_issue.py  diagnose_airsim_freeze.py  docker-demo.sh  fix_imports.py  generate_docs.py  generate_docs.py.bak  manual_requirements_update.py  migrate_config_system.py  migrate_imports.py  migrate_real_time_config.py  remove_path_hacks.py  remove_path_hacks.py.bak  replace_blocking_sleep.py  repository_reorganization.py  run_sim_stack.py  run_sitl_tests.py  run_test_suite.py  setup_airsim_validation.py  simple_repository_cleanup.py  simple_sleep_replacement.py  sitl_integration.py  sitl_integration.py.bak  start-demo.ps1  test_airsim_connection.py  test_ardupilot_settings.py  test_composite_action.py  test_full_airsim_api.py  test_latency_ci.py  test_optimizations.py  test_security_hardening.py  test_simpleflight_interface.py  tune_controller_for_sitl.py  (+8 more)
src/: __init__.py  dart_planner_cli.py
tests/: comprehensive_validation_suite.py  conftest.py  sitl_test_scenarios.json  test_admin_api.py  test_airsim_adapter_integration.py  test_airsim_adapter_methods.py  test_communication_flow.py  test_controller_dynamics.py  test_controller_torque_calculation.py  test_coordinate_frames.py  test_coordinate_frames.py.broken  test_dart_sitl_comprehensive.py  test_di_container.py  test_di_container.py.bak  test_di_container_shim.py  test_di_container_shim.py.bak  test_di_container_v2.py  test_error_paths.py  test_frozen_config.py  test_frozen_config_api.py  test_gateway_security.py  test_heartbeat_safety.py  test_jwt_secret_fix.py  test_mapper_trace_ray.py  test_minimal_takeoff_integration.py  test_monte_carlo_sim.py  test_motor_mixing.py  test_motor_mixing_safety.py  test_os_keyring_integration.py  test_performance_regression.py  test_pixhawk_interface.py  test_planner_controller_contract.py  test_planner_controller_contract.py.bak  test_planner_controller_integration.py  test_planner_performance.py  test_quartic_scheduler.py  test_rate_limiting.py  test_real_time_integration.py  (+16 more)
(+326 files in other folders)
