[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--verbose --cov=src --cov-report=html --cov-report=term-missing"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[project.urls]
Homepage = "https://github.com/Pasqui1010/DART-Planner"
Issues = "https://github.com/Pasqui1010/DART-Planner/issues"

[project]
name = "dart-planner"
version = "0.1.0"
description = "Production-Ready Autonomous Drone Navigation"
readme = "README.md"
