[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["dart_planner", "src"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# Local-dev default: run fast tests, show slowest 10, no coverage.
addopts = "-ra -q --durations=10 -m 'not slow'"
markers = [
    "slow: long-running or integration tests that are skipped by default",
]

[tool.setuptools.packages.find]
where = ["src", "dart_planner"]
namespaces = false

[project.urls]
Homepage = "https://github.com/Pasqui1010/DART-Planner"
Issues = "https://github.com/Pasqui1010/DART-Planner/issues"

[project]
name = "dart-planner"
version = "0.2.0"
description = "Production-Ready Autonomous Drone Navigation"
readme = "README.md"

# Runtime dependencies (synced with requirements.txt)
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "flask>=2.3",
    "flask-socketio>=5.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "mypy",
]
